working on item show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,1 +1,19 @@
-hello
+<div class="container pad40-top">
+	<div class="row">
+		<div class="col-sm-8">
+			hi
+		</div>
+		<div class="col-sm-4">
+			<p>name: <%= @item.name %></p>
+			<p>description: <%= @item.description %></p>
+			<p>price: <%= @item.price %></p>
+			<p>category: <%= @item.category %></p>
+			<p>size: <%= @item.size %></p>
+			<p>brand: <%= @item.brand %></p>
+			<p>posted_at: <%= @item.posted_at %></p>
+			<p>expires_at: <%= @item.expires_at %></p>
+		</div>
+	</div>
+</div>
+
+
