moved item show to react component

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,35 +1,21 @@
-<div class="container pad40-top">
-	<div class="row">
-		<div class="col-sm-7">
-			<%= image_tag 'item-placeholder.png', width: '100%' %>
-		</div>
-		<div class="col-sm-5">
-			<p>name: <%= @item.name %></p>
-			<p>description: <%= @item.description %></p>
-			<p>price: <%= @item.price %></p>
-			<p>category: <%= @item.category %></p>
-			<p>size: <%= @item.size %></p>
-			<p>brand: <%= @item.brand %></p>
-			<p>posted_at: <%= @item.posted_at %></p>
-			<p>expires_at: <%= @item.expires_at %></p>
-		</div>
-	</div>
-
-	<div class="text-center pad40-top">
-		Similar Listings
-	</div>
+<%= content_tag :div,
+  nil,
+  id: "item",
+  data: { 
+    item: @item
+  }
+%>
+<%= javascript_pack_tag 'item' %>
 
 
-	<!-- similar listings here -->
 
 
-	<div class="text-center pad40-top">
-		Discussion
-	</div>
 
 
-	<!-- form to add comments here -->
 
 
-</div>
+
+
+
+
 
