--- a/app/views/layouts/_main_topbar.html.erb
+++ b/app/views/layouts/_main_topbar.html.erb
@@ -37,22 +37,22 @@
     <ul class="navbar-nav ml-auto">
 
       <!-- devise feature test here -->
-    
-        <li class="nav-item">
-          <%= link_to 'My Profile', root_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Sign Out', root_path, :method=>'delete', class: 'nav-link' %>
-        </li>
-  
-        <li class="nav-item">
-          <%= link_to 'Sign In', root_path, class: 'nav-link' %>
-        </li>
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'My Profile', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Sign Out', destroy_user_session_path, :method=>'delete', class: 'nav-link' %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+          </li>
 
-        <li class="nav-item">
-          <%= link_to 'Register', root_path, class: 'nav-link' %>
-        </li>
-    
+          <li class="nav-item">
+            <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+          </li>
+        <% end %>
 
 
     </ul>
