added new styles to item cards

--- a/app/assets/stylesheets/padding.scss
+++ b/app/assets/stylesheets/padding.scss
@@ -67,3 +67,79 @@
 .pad80-bottom { 
 	margin-bottom:80px; 
 }
+
+
+
+
+/* right padding */
+.pad5-right { 
+	margin-right:5px; 
+}
+
+.pad10-right { 
+	margin-right:10px; 
+}
+
+.pad15-right { 
+	margin-right:15px; 
+}
+
+.pad20-right { 
+	margin-right:20px; 
+}
+
+.pad25-right { 
+	margin-right:25px; 
+}
+
+.pad30-right { 
+	margin-right:30px; 
+}
+
+.pad35-right { 
+	margin-right:35px; 
+}
+
+.pad40-right { 
+	margin-right:40px; 
+}
+
+
+/* left padding */
+.pad5-left { 
+	margin-left:5px; 
+}
+
+.pad10-left { 
+	margin-left:10px; 
+}
+
+.pad15-left { 
+	margin-left:15px; 
+}
+
+.pad20-left { 
+	margin-left:20px; 
+}
+
+.pad25-left { 
+	margin-left:25px; 
+}
+
+.pad30-left { 
+	margin-left:30px; 
+}
+
+.pad35-left { 
+	margin-left:35px; 
+}
+
+.pad40-left { 
+	margin-left:40px; 
+}
+
+.indent {
+	margin-left: 35px;
+}
+
+
