--- a/app/views/layouts/_main_topbar.html.erb
+++ b/app/views/layouts/_main_topbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="main-navbar">
-  <%= link_to 'Stunt-In', root_path, class: 'navbar-brand' %>
+  <%= link_to "STUNT'IN", root_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -59,7 +59,7 @@
 
 
     <%= form_tag root_path, :method => :get, class: 'form-inline my-2 my-lg-0 search-form' do %>
-	    <%= text_field_tag 'search', '' ,placeholder: 'Search Stunt-In', class: 'form-control mr-sm-2' %>
+	    <%= text_field_tag 'search', '' ,placeholder: "Search STUNT'IN", class: 'form-control mr-sm-2' %>
 
 	    <%= button_tag 'Search', class: 'btn btn-outline-success my-2 my-sm-0' %>
 	  <% end %>
