--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -40,7 +40,9 @@
 
 
 #search-actions-navbar.navbar {
-  min-height: 80px;
+  min-height: 60px;
+  /*color: #878787;*/
+  /*text-align: center;*/
 }
 
 #search-actions-navbar.navbar-brand {
@@ -63,6 +65,17 @@
     line-height: 27px;
   }
 }
+
+
+/*secondary topbar*/
+.secondary-link {
+  /*display: inline-block;*/
+  /*text-align: center;*/
+  color: black;
+  font-size: 12px;
+}
+
+
 
 
 
