--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <body>
     <%= render 'layouts/main_topbar' %>
 
-    
+    <%= render 'layouts/secondary_topbar' %>
 
     <% if current_page?(root_path) %>
       <%= render 'layouts/search_banner' %>
