--- a/app/views/layouts/_secondary_topbar.html.erb
+++ b/app/views/layouts/_secondary_topbar.html.erb
@@ -8,7 +8,7 @@
     		
     		<div class="row" style="text-align:center;">
     			<div class="col-md-2">
-    				<%= link_to "DESIGNERS", root_path, class: 'secondary-link' %>
+    				<%= link_to "DESIGNERS", designers_path, class: 'secondary-link' %>
     			</div>
     			<div class="col-md-2">
     				<%= link_to "OUTERWEAR", root_path, class: 'secondary-link' %>
